fix(status): remove cut off of badge

--- a/components/ui/User/State/State.less
+++ b/components/ui/User/State/State.less
@@ -13,7 +13,7 @@
 
     circle {
       stroke: @midground;
-      stroke-width: 5;
+      stroke-width: 4;
       paint-order: stroke;
     }
     &.is-online {
